package edu.fiuba.algo3.modelo.Jugador.Celda;

import edu.fiuba.algo3.modelo.Movimiento.Movimiento;
import edu.fiuba.algo3.modelo.Vehiculos.IVehiculo;

public class Celda {
    public Movimiento avanzarEn(IVehiculo vehiculo){
        Movimiento movimiento = null;
        return movimiento;
    }
}
