package edu.fiuba.algo3.modelo.Sorpresa;

public interface Sorpresa {
}
