package edu.fiuba.algo3.modelo.Vehiculos;

public interface Vehiculo {
}
